--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -38,6 +38,7 @@ env:
 jobs:
 
   Echo-inputs:
+    if: inputs.debug
     runs-on: ubuntu-latest
     steps:
       - run: |
@@ -46,9 +47,9 @@ jobs:
           echo run-tests ${{ inputs.run-tests }}
           echo check-examples ${{ inputs.check-examples }}
           echo check-vignettes ${{ inputs.check-vignettes }}
-        if: inputs.debug
 
   Show-current-strategy-matrix-values:
+    if: inputs.debug
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -57,7 +58,6 @@ jobs:
       - run: |
           echo os ${{ matrix.os }}
           echo R version ${{ matrix.r }}
-        if: inputs.debug
 
   R-CMD-check:
     name: Check R package on ${{ matrix.os }} using R version ${{ matrix.r }}
@@ -74,6 +74,7 @@ jobs:
 
     steps:
       - name: Check out repository
+        if: ${{ !inputs.debug }}
         uses: actions/checkout@v2
 
       # REMOVE THIS LATER!!!
@@ -86,22 +87,26 @@ jobs:
           echo "NEED_TEX_EXTRAS: $NEED_TEX_EXTRAS"
 
       - name: Install Pandoc
+        if: ${{ !inputs.debug }}
         uses: r-lib/actions/setup-pandoc@v2
 
       - name: Set up R
+        if: ${{ !inputs.debug }}
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.r }}
           http-user-agent: ${{ matrix.http-user-agent }}
           use-public-rspm: true
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
+      - name: Set up R dependencies
+        if: ${{ !inputs.debug }}
+        uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck
           needs: check
 
       - name: Install TinyTex
-        if: env.NEED_TEX == 'true'
+        if: ${{ env.NEED_TEX == 'true' && !inputs.debug }}
         uses: r-lib/actions/setup-tinytex@v2
 
       - name: debug 1
@@ -144,7 +149,7 @@ jobs:
           echo "debug 7 ran"
 
       - name: Install extra LaTeX packages
-        if: env.NEED_TEX_EXTRAS == 'true'
+        if: ${{ env.NEED_TEX_EXTRAS == 'true' && !inputs.debug }}
         run: |
 
           # Install the tinytex R package to run tinytex::pdflatex.
@@ -211,6 +216,8 @@ jobs:
           echo "BUILD_ARGS = $BUILD_ARGS"
           echo "ARGS = ${{ env.ARGS }}"
           echo "BUILD_ARGS = ${{ env.BUILD_ARGS }}"
+          echo ${{ env.ARGS }}
+          echo ${{ env.BUILD_ARGS }}
 
       - name: Check package
         if: ${{ !inputs.debug }}
