More windows debugging

--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -242,6 +242,12 @@ jobs:
           system(sprintf('echo ("ARGS=\'%s\'") >> $env:GITHUB_ENV', args))
         shell: Rscript {0}
 
+      - name: ERASE THIS Compute check args
+        if: runner.os == 'Windows'
+        run: |
+          echo ("ARGS=\'c("hi")\'") >> $env:GITHUB_ENV        
+          echo ("BUILD_ARGS=\'c("lo")\'") >> $env:GITHUB_ENV        
+
       - name: Check check-r-package arg values (Windows)
         if: inputs.debug && runner.os == 'Windows'
         run: |
