--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -37,7 +37,8 @@ env:
 
 jobs:
 
-  Echo-inputs:
+  echo-inputs:
+    name: Echo inputs
     if: inputs.debug
     runs-on: ubuntu-latest
     steps:
@@ -48,7 +49,8 @@ jobs:
           echo check-examples ${{ inputs.check-examples }}
           echo check-vignettes ${{ inputs.check-vignettes }}
 
-  Show-current-strategy-matrix-values:
+  show-current-strategy-matrix-values:
+    name: Show current values from strategy matrix
     if: inputs.debug
     runs-on: ubuntu-latest
     strategy:
@@ -59,10 +61,47 @@ jobs:
           echo os ${{ matrix.os }}
           echo R version ${{ matrix.r }}
 
+  compute-check-args:
+    name: Compute check args
+    runs-on: ubuntu-latest
+    outputs:
+      build_args: ${{ steps.compute-args.outputs.build_args }}
+      args: ${{ steps.compute-args.outputs.args }}
+    steps:
+      id: compute-args
+    run: |
+      build_args_value <- c()
+      args_value <- c('--as-cran')
+      if ('${{ needs.get_configuration.outputs.check-manual }}' == 'false') {
+        build_args_value <- append(build_args_value, '--no-manual')
+        args_value <- append(args_value, '--no-manual')
+      }
+      if ('${{ needs.get_configuration.outputs.check-vignettes }}' == 'false') {
+        build_args_value <- append(build_args_value, '--no-build-vignettes')
+        args_value <- append(args_value, '--ignore-vignettes')
+      }
+      if ('${{ needs.get_configuration.outputs.run-tests }}' == 'false') {
+        args_value <- append(args_value, '--no-tests')
+      }
+      if ('${{ needs.get_configuration.outputs.check-examples }}' == 'false') {
+        args_value <- append(args_value, '--no-examples')
+      }
+
+      # serialize these vectors as strings:
+      build_args <- paste0('c(\\\"', paste(build_args_value, collapse = '\\\", \\\"'), '\\\")')
+      args <- paste0('c(\\\"', paste(args_value, collapse = '\\\", \\\"'), '\\\")')
+
+      # store these in the environment
+      system(sprintf('echo "::set-output name=build_args:\'%s\'"', build_args))
+      system(sprintf('echo "::set-output name=args:\'%s\'"', args))
+    shell: Rscript {0}
+
   R-CMD-check:
     name: Check R package on ${{ matrix.os }} using R version ${{ matrix.r }}
 
     runs-on: ${{ matrix.os }}
+
+    needs: compute-check-args
 
     strategy:
       fail-fast: false
@@ -180,49 +219,19 @@ jobs:
 
         shell: Rscript {0}
 
-      - name: Compute check args
-        run: |
-          build_args_value <- c()
-          args_value <- c('--as-cran')
-          if ('${{ needs.get_configuration.outputs.check-manual }}' == 'false') {
-            build_args_value <- append(build_args_value, '--no-manual')
-            args_value <- append(args_value, '--no-manual')
-          }
-          if ('${{ needs.get_configuration.outputs.check-vignettes }}' == 'false') {
-            build_args_value <- append(build_args_value, '--no-build-vignettes')
-            args_value <- append(args_value, '--ignore-vignettes')
-          }
-          if ('${{ needs.get_configuration.outputs.run-tests }}' == 'false') {
-            args_value <- append(args_value, '--no-tests')
-          }
-          if ('${{ needs.get_configuration.outputs.check-examples }}' == 'false') {
-            args_value <- append(args_value, '--no-examples')
-          }
-
-          # serialize these vectors as strings:
-          build_args <- paste0('c(\\\"', paste(build_args_value, collapse = '\\\", \\\"'), '\\\")')
-          args <- paste0('c(\\\"', paste(args_value, collapse = '\\\", \\\"'), '\\\")')
-
-          # store these in the environment
-          system(sprintf('echo "BUILD_ARGS=\'%s\'" >> $GITHUB_ENV', build_args))
-          system(sprintf('echo "ARGS=\'%s\'" >> $GITHUB_ENV', args))
-        shell: Rscript {0}
-
       - name: Check check-r-package arg values
         if: inputs.debug
         run: |
-          echo "ARGS = $ARGS"
-          echo "BUILD_ARGS = $BUILD_ARGS"
-          echo "ARGS = ${{ env.ARGS }}"
-          echo "BUILD_ARGS = ${{ env.BUILD_ARGS }}"
-          echo ${{ env.ARGS }}
-          echo ${{ env.BUILD_ARGS }}
+          echo "args = ${{ needs.compute-check-args.outputs.args }}"
+          echo "build_args = ${{ needs.compute-check-args.outputs.build_args }}"
+          echo ${{ needs.compute-check-args.outputs.args }}
+          echo ${{ needs.compute-check-args.outputs.build_args }}
 
       - name: Check package
         if: ${{ !inputs.debug }}
         uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
-          args: ${{ env.ARGS }}
-          build_args: ${{ env.BUILD_ARGS }}
+          args: ${{ needs.compute-check-args.outputs.args }}
+          build_args: ${{ needs.compute-check-args.outputs.build_args }}
           error-on: '"error"'
