--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -68,33 +68,33 @@ jobs:
       build_args: ${{ steps.compute-args.outputs.build_args }}
       args: ${{ steps.compute-args.outputs.args }}
     steps:
-      id: compute-args
-    run: |
-      build_args_value <- c()
-      args_value <- c('--as-cran')
-      if ('${{ needs.get_configuration.outputs.check-manual }}' == 'false') {
-        build_args_value <- append(build_args_value, '--no-manual')
-        args_value <- append(args_value, '--no-manual')
-      }
-      if ('${{ needs.get_configuration.outputs.check-vignettes }}' == 'false') {
-        build_args_value <- append(build_args_value, '--no-build-vignettes')
-        args_value <- append(args_value, '--ignore-vignettes')
-      }
-      if ('${{ needs.get_configuration.outputs.run-tests }}' == 'false') {
-        args_value <- append(args_value, '--no-tests')
-      }
-      if ('${{ needs.get_configuration.outputs.check-examples }}' == 'false') {
-        args_value <- append(args_value, '--no-examples')
-      }
+      - id: compute-args
+        run: |
+          build_args_value <- c()
+          args_value <- c('--as-cran')
+          if ('${{ needs.get_configuration.outputs.check-manual }}' == 'false') {
+            build_args_value <- append(build_args_value, '--no-manual')
+            args_value <- append(args_value, '--no-manual')
+          }
+          if ('${{ needs.get_configuration.outputs.check-vignettes }}' == 'false') {
+            build_args_value <- append(build_args_value, '--no-build-vignettes')
+            args_value <- append(args_value, '--ignore-vignettes')
+          }
+          if ('${{ needs.get_configuration.outputs.run-tests }}' == 'false') {
+            args_value <- append(args_value, '--no-tests')
+          }
+          if ('${{ needs.get_configuration.outputs.check-examples }}' == 'false') {
+            args_value <- append(args_value, '--no-examples')
+          }
 
-      # serialize these vectors as strings:
-      build_args <- paste0('c(\\\"', paste(build_args_value, collapse = '\\\", \\\"'), '\\\")')
-      args <- paste0('c(\\\"', paste(args_value, collapse = '\\\", \\\"'), '\\\")')
+          # serialize these vectors as strings:
+          build_args <- paste0('c(\\\"', paste(build_args_value, collapse = '\\\", \\\"'), '\\\")')
+          args <- paste0('c(\\\"', paste(args_value, collapse = '\\\", \\\"'), '\\\")')
 
-      # store these in the environment
-      system(sprintf('echo "::set-output name=build_args:\'%s\'"', build_args))
-      system(sprintf('echo "::set-output name=args:\'%s\'"', args))
-    shell: Rscript {0}
+          # store these in the environment
+          system(sprintf('echo "::set-output name=build_args:\'%s\'"', build_args))
+          system(sprintf('echo "::set-output name=args:\'%s\'"', args))
+        shell: Rscript {0}
 
   R-CMD-check:
     name: Check R package on ${{ matrix.os }} using R version ${{ matrix.r }}
