--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -91,8 +91,8 @@ jobs:
           args <- paste0('c(\\\"', paste(args_value, collapse = '\\\", \\\"'), '\\\")')
 
           # store these in the environment
-          system(sprintf('echo "::set-output name=build_args::\'%s\'"', build_args))
-          system(sprintf('echo "::set-output name=args::\'%s\'"', args))
+          system(sprintf('echo "::set-output name=build_args::%s"', build_args))
+          system(sprintf('echo "::set-output name=args::%s"', args))
         shell: Rscript {0}
 
   R-CMD-check:
