--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -182,10 +182,10 @@ jobs:
       - name: Check check-r-package arg values
         if: inputs.debug
         run: |
-          #echo "args = ${{ needs.compute-check-args.outputs.args }}"
-          #echo "build_args = ${{ needs.compute-check-args.outputs.build_args }}"
-          echo ${{ needs.compute-check-args.outputs.args }}
-          echo ${{ needs.compute-check-args.outputs.build_args }}
+          echo "args = ${{ needs.compute-check-args.outputs.args }}"
+          echo "build_args = ${{ needs.compute-check-args.outputs.build_args }}"
+          #echo ${{ needs.compute-check-args.outputs.args }}
+          #echo ${{ needs.compute-check-args.outputs.build_args }}
 
       - name: Check package
         if: ${{ !inputs.debug }}
