--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -89,7 +89,7 @@ jobs:
           # serialize these vectors as strings:
           build_args <- paste0('c(\\\"', paste(build_args_value, collapse = '\\\", \\\"'), '\\\")')
           args <- paste0('c(\\\"', paste(args_value, collapse = '\\\", \\\"'), '\\\")')
-
+          print(sprintf("args = %s; build_args = %s", args, build_args)) # <-- REMOVE THIS!
           # store these in the environment
           system(sprintf('echo "::set-output name=build_args::%s"', build_args))
           system(sprintf('echo "::set-output name=args::%s"', args))
@@ -186,7 +186,8 @@ jobs:
           echo "build_args = ${{ needs.compute-check-args.outputs.build_args }}"
           echo '${{ needs.compute-check-args.outputs.args }}'
           echo '${{ needs.compute-check-args.outputs.build_args }}'
-
+          echo "::debug::${{ needs.compute-check-args.outputs.args }}"
+          echo "::debug::${{ needs.compute-check-args.outputs.build_args }}"
       - name: Check package
         if: ${{ !inputs.debug }}
         uses: r-lib/actions/check-r-package@v2
