--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -185,8 +185,8 @@ jobs:
           echo "args = ${{ needs.compute-check-args.outputs.args }}"
           echo "build_args = ${{ needs.compute-check-args.outputs.build_args }}"
           echo "::debug::before single quotes"
-          echo '${{ needs.compute-check-args.outputs.args }}'
-          echo '${{ needs.compute-check-args.outputs.build_args }}'
+          echo 'args = ${{ needs.compute-check-args.outputs.args }}'
+          echo 'build_args = ${{ needs.compute-check-args.outputs.build_args }}'
           echo "::debug::after single quotes"
           echo "::debug::${{ format('[debug] args: {0}', needs.compute-check-args.outputs.args) }}"
           echo "::debug::${{ format('[debug] build_args: {0}', needs.compute-check-args.outputs.build_args) }}"
