--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -87,16 +87,21 @@ jobs:
           }
 
           # serialize these vectors as strings:
-          build_args <- paste0('c(\\\"', paste(build_args_value, collapse = '\\\", \\\"'), '\\\")')
-          args <- paste0('c(\\\"', paste(args_value, collapse = '\\\", \\\"'), '\\\")')
-          print(sprintf("args = %s; build_args = %s", args, build_args)) # <-- REMOVE THIS!
-          cat(sprintf("args = %s; build_args = %s\n", args, build_args)) # <-- REMOVE THIS!
-          cat("printing strings sent to 'system':\n")
-          cat(sprintf('echo "::set-output name=build_args::%s"', build_args)); cat("\n")
-          cat(sprintf('echo "::set-output name=args::%s"', args)); cat("\n")
+          build_args <- paste0('c(\\"', paste(build_args_value, collapse = '\\", \\"'), '\\")')
+          args <- paste0('c(\\"', paste(args_value, collapse = '\\", \\"'), '\\")')
+
           # store these in the environment
           system(sprintf('echo "::set-output name=build_args::%s"', build_args))
           system(sprintf('echo "::set-output name=args::%s"', args))
+
+          # Note (quoting hell!): The result of the sprintf function,
+          # the string that will be passed to the system function,
+          # will be something like (e.g.) this:
+          #
+          #     'echo "::set-output name=args::c(\\\"--no-manual\\\", \\\"--no-tests\\\")"'
+          #
+          # 
+
         shell: Rscript {0}
 
   R-CMD-check:
