--- a/.github/workflows/run-package-checks.yaml
+++ b/.github/workflows/run-package-checks.yaml
@@ -50,19 +50,47 @@ jobs:
       - uses: actions/checkout@v2
       - id: set-matrix
         name: Conditional Build Matrix
-        uses: JoshuaTheMiller/conditional-build-matrix@0.0.1
+        uses: JoshuaTheMiller/conditional-build-matrix@38b0036b90a7f5f1461f446948d156a714e4fa1e # release 0.0.1
         with:
           inputFile: '.github/workflows/strategy_matrix.json'
 
           # This filter uses the JMESPath query language to modify the
           # strategy matrix (see https://jmespath.org/).  Note that if
           # the event is anything other than 'workflow_dispatch', the
-          # filter condition is always true and nothing gets filtered
-          # out: all the configurations are run.
-
+          # filter condition is true only when configName is 'R 3.5 on
+          # Ubuntu'.
+          #
+          # For the public version of this repository, the "&&
+          # configName = 'R 3.5 on Ubuntu'" clause will be eliminated
+          # so that when the event is anything other than
+          # 'workflow_dispatch', the filter condition is always true
+          # and nothing gets filtered out: all the configurations will
+          # be run.
+          #
+          # Note that the output matrix of this job is the includes
+          # for a strategy matrix rather than the whole strategy
+          # matrix.  Thus, if the result of the filter is
+          # [
+          #   {
+          #     "configName": "R 3.5 on Ubuntu",
+          #     "os": "ubuntu-20.04",
+          #     "r": "3.5"
+          #   }
+          # ],
+          # the actual output will be
+          # { "include":
+          #     [
+          #       {
+          #         "configName": "R 3.5 on Ubuntu",
+          #         "os": "ubuntu-20.04",
+          #         "r": "3.5"
+          #       }
+          #     ]
+          # }.       
           filter:
             '[?configName == `${{ github.event.inputs.platform-to-check }}`
-                || `${{ github.event_name }}` != ''workflow_dispatch'']'
+                || `${{ github.event_name }}` != ''workflow_dispatch''
+                    && configName = ''R 3.5 on Ubuntu'']'
 
   # For debugging:
   display_matrix:
@@ -84,12 +112,25 @@ jobs:
       strategy-matrix: ${{ needs.matrix_prep.outputs.matrix }}
       
       # Note: Non-manual dispatches automatically run the tests and
-      # check the manual, examples, and vignettes!  Note that the inputs will be strings! (either 'true' or 'false') so we have to use the "== 'true'" clause to convert the value to a bona fide boolean.
+      # check the manual, examples, and vignettes!  Note that the
+      # github.event inputs will be strings (either 'true' or 'false')
+      # so we have to use the "== 'true'" clause to convert the value
+      # to a bona fide boolean!
 
-      check-manual: ${{ github.event.inputs.check-manual == 'true' || github.event_name != 'workflow_dispatch' }}
-      run-tests: ${{ github.event.inputs.run-tests == 'true' || github.event_name != 'workflow_dispatch' }}
-      check-examples: ${{ github.event.inputs.check-examples == 'true' || github.event_name != 'workflow_dispatch' }}
-      check-vignettes: ${{ github.event.inputs.check-vignettes == 'true' || github.event_name != 'workflow_dispatch' }}
+      check-manual: >
+        ${{ github.event.inputs.check-manual == 'true'
+            || github.event_name != 'workflow_dispatch' }}
+      run-tests: >
+        ${{ github.event.inputs.run-tests == 'true'
+            || github.event_name != 'workflow_dispatch' }}
+      check-examples: >
+        ${{ github.event.inputs.check-examples == 'true'
+            || github.event_name != 'workflow_dispatch' }}
+      check-vignettes: >
+        ${{ github.event.inputs.check-vignettes == 'true'
+            || github.event_name != 'workflow_dispatch' }}
 
-      debug: ${{ github.event.inputs.debug == 'true' || github.event_name != 'workflow_dispatch' }}
+      debug: >
+        ${{ github.event.inputs.debug == 'true'
+            || github.event_name != 'workflow_dispatch' }}
 
