--- a/.github/workflows/run-package-checks.yaml
+++ b/.github/workflows/run-package-checks.yaml
@@ -90,7 +90,7 @@ jobs:
           filter:
             '[?configName == `${{ github.event.inputs.platform-to-check }}`
                 || `${{ github.event_name }}` != ''workflow_dispatch''
-                    && configName = ''R 3.5 on Ubuntu'']'
+                    && configName == ''R 3.5 on Ubuntu'']'
 
   # For debugging:
   display_matrix:
