--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -5,7 +5,6 @@
 # 2. All the steps have been given names.
 # 3. Steps have been added to (conditionally) install LaTeX and needed LaTeX packages.
 # 4. A step has been added to compute what argument values to pass to the "check-r-package" action.
-# 5. [error-on?]
 
 on:
   workflow_call:
@@ -86,21 +85,30 @@ jobs:
             args_value <- append(args_value, '--no-examples')
           }
 
-          # serialize these vectors as strings:
+          # serialize these vectors as strings (see note below):
           build_args <- paste0('c(\\"', paste(build_args_value, collapse = '\\", \\"'), '\\")')
           args <- paste0('c(\\"', paste(args_value, collapse = '\\", \\"'), '\\")')
 
           # store these in the environment
           system(sprintf('echo "::set-output name=build_args::%s"', build_args))
           system(sprintf('echo "::set-output name=args::%s"', args))
-
-          # Note (quoting hell!): The result of the sprintf function,
-          # the string that will be passed to the system function,
-          # will be something like (e.g.) this:
           #
-          #     'echo "::set-output name=args::c(\\\"--no-manual\\\", \\\"--no-tests\\\")"'
+          # NOTE (quoting hell!): The result of the sprintf
+          # function--the string that will be passed to the system
+          # function--will be something like (e.g.) this:
           #
-          # 
+          #     'echo "::set-output name=args::c(\\"--no-manual\\", \\"--no-tests\\")"'
+          #
+          # Because in R strings a literal backslash must be written
+          # as "\\", no matter which kind of quotes are used for
+          # string delimiters, the command actually run by the shell
+          # will then be
+          #
+          #     echo "::set-output name=args::c(\"--no-manual\", \"--no-tests\")"
+          #
+          # and the value of the job output 'args' will then become
+          #
+          #     c("--no-manual", "--no-tests")
 
         shell: Rscript {0}
 
@@ -191,15 +199,8 @@ jobs:
       - name: Check check-r-package arg values
         if: inputs.debug
         run: |
-          echo "args = ${{ needs.compute-check-args.outputs.args }}"
-          echo "build_args = ${{ needs.compute-check-args.outputs.build_args }}"
-          echo '::debug::before single quotes'
           echo 'args = ${{ needs.compute-check-args.outputs.args }}'
           echo 'build_args = ${{ needs.compute-check-args.outputs.build_args }}'
-          echo '::debug::after single quotes'
-          echo '::debug::${{ format('[debug] args: {0}', needs.compute-check-args.outputs.args) }}'
-          echo '::debug::${{ format('[debug] build_args: {0}', needs.compute-check-args.outputs.build_args) }}'
-          echo '::debug::done'
       - name: Check package
         if: ${{ !inputs.debug }}
         uses: r-lib/actions/check-r-package@v2
@@ -207,4 +208,3 @@ jobs:
           upload-snapshots: true
           args: ${{ needs.compute-check-args.outputs.args }}
           build_args: ${{ needs.compute-check-args.outputs.build_args }}
-          error-on: '"error"'
