--- a/.github/workflows/run-package-checks.yaml
+++ b/.github/workflows/run-package-checks.yaml
@@ -102,16 +102,12 @@ jobs:
   display_matrix:
     name: "DEBUG: Display strategy matrix"
     if: github.event.inputs.debug == 'true' || github.event_name != 'workflow_dispatch'
-    needs: matrix_prep # Supplies matrix output.
+    needs: matrix_prep
     runs-on: ubuntu-latest
     steps:
-    - name: Report Configuration
-      env:
-        MATRIX_CONTEXT: ${{ needs.matrix_prep.outputs.matrix }}
+    - name: Show the strategy matrix
       run: |
-        echo "matrix: $MATRIX_CONTEXT"
-        echo 'matrix: $MATRIX_CONTEXT'
-        echo 'direct: ${{ needs.matrix_prep.outputs.matrix }}'
+        echo 'matrix: ${{ needs.matrix_prep.outputs.matrix }}'
 
   call-R-CMD-check:
     uses: ./.github/workflows/new-R-CMD-check.yaml
