--- a/.github/workflows/run_bookdown_and_pkgdown.yml
+++ b/.github/workflows/run_bookdown_and_pkgdown.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     name: Generate pkgdown and bookdown documentation
 
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
 
     steps:
 
