Added missing colon.

--- a/.github/actions/render_bookdown_book/action.yml
+++ b/.github/actions/render_bookdown_book/action.yml
@@ -1,7 +1,7 @@
 name: 'Render Bookdown Book'
 description: ''
 inputs:
-  repository-root
+  repository-root:
     description: 'The root of the repository containing the bookdown source files'
     required: true
 runs:
