--- a/.github/actions/render_bookdown_book/action.yml
+++ b/.github/actions/render_bookdown_book/action.yml
@@ -7,8 +7,12 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Test for Pandoc
+      run: pandoc --version
+      shell: bash
 
     - name: Install Pandoc
+      if failure()
       uses: r-lib/actions/setup-pandoc@v1
 
     - name: 8. Install bookdown
