--- a/.github/actions/build_pkgdown_site/action.yml
+++ b/.github/actions/build_pkgdown_site/action.yml
@@ -13,7 +13,7 @@ runs:
       shell: bash
 
     - name: Install Pandoc
-      if failure()
+      if: failure()
       uses: r-lib/actions/setup-pandoc@v1
 
     - name: Install pkgdown
