--- a/.github/actions/render_bookdown_book/action.yml
+++ b/.github/actions/render_bookdown_book/action.yml
@@ -12,7 +12,7 @@ runs:
       shell: bash
 
     - name: Install Pandoc
-      if failure()
+      if: failure()
       uses: r-lib/actions/setup-pandoc@v1
 
     - name: 8. Install bookdown
