Upgrade to setup-r v2. Try coninue-on-error.

--- a/.github/actions/build_pkgdown_site/action.yml
+++ b/.github/actions/build_pkgdown_site/action.yml
@@ -11,6 +11,7 @@ runs:
     - name: Test for Pandoc
       run: pandoc --version
       shell: bash
+      continue-on-error: true
 
     - name: Install Pandoc
       if: failure()
