--- a/.github/actions/build_pkgdown_site/action.yml
+++ b/.github/actions/build_pkgdown_site/action.yml
@@ -9,12 +9,13 @@ runs:
   steps:
 
     - name: Test for Pandoc
+      id: pandoc-test
       run: pandoc --version
       shell: bash
       continue-on-error: true
 
     - name: Install Pandoc
-      if: failure()
+      if: always() && steps.pandoc-test.outcome == 'failure'
       uses: r-lib/actions/setup-pandoc@v1
 
     - name: Install pkgdown
