--- a/.github/actions/render_bookdown_book/action.yml
+++ b/.github/actions/render_bookdown_book/action.yml
@@ -8,12 +8,13 @@ runs:
   using: "composite"
   steps:
     - name: Test for Pandoc
+      id: pandoc-test
       run: pandoc --version
       shell: bash
       continue-on-error: true
 
     - name: Install Pandoc
-      if: failure()
+      if: always() && steps.pandoc-test.outcome == 'failure'
       uses: r-lib/actions/setup-pandoc@v1
 
     - name: 8. Install bookdown
